[project]
name = "packet-inspect"
version = "0.1.0"
description = ""
authors = [
    {name = "amith"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "scapy (>=2.7.0,<3.0.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "pinecone (>=8.0.0,<9.0.0)",
    "prettyprint (>=0.1.5,<0.2.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "dnspython (>=2.8.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
